moi schau ob des wos wiad

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,9 @@
 <body>
   <div id="map">
     <img src="bild.png" alt="Gebäudeplan">
+    <div id="svg-container"></div>
   </div>
+  
   <div id="buttons">
     <button id="edit-btn">Bearbeiten</button>
     <button id="add-btn" style="display: none;">Punkt hinzufügen</button>
@@ -25,6 +27,7 @@
       <li><span class="farbe" style="background-color:hsl(0, 100%, 50%)"></span> 81-100 dB</li>
     </ul>
   </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/3.1.1/svg.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
