--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,12 @@
   
   <div id="buttons">
     <button id="edit-btn">Bearbeiten</button>
-    <button id="add-btn" style="display: none;">Punkt hinzufügen</button>
-    <button id="delete-btn" style="display: none;">Punkt löschen</button>
+    <button id="add-btn" style="display: none;">Punkt hinzufuegen</button>
+    <button id="delete-btn" style="display: none;">Punkt loeschen</button>
+    <button id="add-polygon-btn" style="display: none;">Polygon hinzufuegen</button>
+    <button id="delete-polygon-btn" style="display: none;">Polygon loeschen</button>
     <div id="slider-div" style="display:none;">
-      Punktgröße: <input type="range" min="10" max="30" value="1" class="slider" id="punkt-slider">
+      Punktgroesse: <input type="range" min="10" max="30" value="1" class="slider" id="punkt-slider">
     </div>
   </div>
   <div id="legende">
