--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <title>Noislevel Simulator</title>
+
 </head>
 <body>
   <div class="container">
@@ -17,12 +20,12 @@
       <button id="add-polygon-btn" class="action-btn">Polygon hinzufuegen</button>
       <button id="delete-polygon-btn" class="action-btn">Polygon loeschen</button>
       <div id="slider-div" style="display:none;">
-        Punktgroeße: <input type="range" min="10" max="30" value="1" class="slider" id="punkt-slider">
+        Punktgroesse: <input type="range" min="10" max="30" value="1" class="slider" id="punkt-slider">
       </div>
     </div>
     
     <div id="legende">
-      <h3>Legende</h3>
+      <h3>Noiselevel</h3>
       <ul>
         <li><span class="farbe" style="background-color:hsl(120, 100%, 50%)"></span> 0-20 dB</li>
         <li><span class="farbe" style="background-color:hsl(90, 100%, 50%)"></span> 21-40 dB</li>
